--- a/frontend/src/app/components/product/product-read/product-read.component.css
+++ b/frontend/src/app/components/product/product-read/product-read.component.css
@@ -1,3 +1,18 @@
 table {
   width: 100%;
 }
+a {
+  border-radius: 5px;
+  color: #f3f3f3;
+  padding: 6px;
+  margin: 5px;
+}
+a.edit {
+  background: #293ea5;
+}
+a > i {
+  font-size: 15px;
+}
+a.delete {
+  background: #d9534f;
+}
