--- a/frontend/src/app/components/product/product-read/product-read.component.html
+++ b/frontend/src/app/components/product/product-read/product-read.component.html
@@ -18,7 +18,14 @@
       {{ element.price | currency: "BRL" }}
     </td>
   </ng-container>
-
+  <!-- Delete Column -->
+  <ng-container matColumnDef="action">
+    <th mat-header-cell *matHeaderCellDef>Action</th>
+    <td mat-cell *matCellDef="let element">
+      <a routerLink="" class="edit"><i class="material-icons">edit</i></a>
+      <a routerLink="" class="delete"><i class="material-icons">delete</i></a>
+    </td>
+  </ng-container>
   <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
   <tr mat-row *matRowDef="let row; columns: displayedColumns"></tr>
 </table>
