--- a/frontend/src/app/components/product/product-read/product-read.component.html
+++ b/frontend/src/app/components/product/product-read/product-read.component.html
@@ -22,7 +22,9 @@
   <ng-container matColumnDef="action">
     <th mat-header-cell *matHeaderCellDef>Action</th>
     <td mat-cell *matCellDef="let element">
-      <a routerLink="" class="edit"><i class="material-icons">edit</i></a>
+      <a routerLink="/products/update/{{ element.id }}" class="edit"
+        ><i class="material-icons">edit</i></a
+      >
       <a routerLink="" class="delete"><i class="material-icons">delete</i></a>
     </td>
   </ng-container>
