--- a/frontend/src/app/components/product/product-read/product-read.component.html
+++ b/frontend/src/app/components/product/product-read/product-read.component.html
@@ -25,7 +25,9 @@
       <a routerLink="/products/update/{{ element.id }}" class="edit"
         ><i class="material-icons">edit</i></a
       >
-      <a routerLink="" class="delete"><i class="material-icons">delete</i></a>
+      <a routerLink="/products/destroy/{{ element.id }}" class="delete"
+        ><i class="material-icons">delete</i></a
+      >
     </td>
   </ng-container>
   <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
