--- a/frontend/src/app/components/product/product-delete/product-delete.component.html
+++ b/frontend/src/app/components/product/product-delete/product-delete.component.html
@@ -1,27 +1,29 @@
 <mat-card>
-  <mat-card-title> Alterar Produto</mat-card-title>
+  <mat-card-title> Tem certeza que deseja deletar este produto?</mat-card-title>
   <form action="">
     <mat-form-field>
       <input
         type="text"
         name="name"
-        [(ngModel)]="product.name"
+        [ngModel]="product.name"
         placeholder="Nome do produto"
         matInput
+        disabled
       />
     </mat-form-field>
     <mat-form-field>
       <input
         type="number"
         name="price"
-        [(ngModel)]="product.price"
+        [ngModel]="product.price"
         placeholder="Preço R$"
         matInput
+        disabled
       />
     </mat-form-field>
   </form>
-  <button mat-raised-button (click)="updateProduct()" color="primary">
-    Atualizar
+  <button mat-raised-button (click)="deleteProduct()" color="warn">
+    Deletar
   </button>
   <button mat-raised-button (click)="cancel()" color="default">Cancelar</button>
 </mat-card>
